--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <style>
+      textarea{
+    width:100%;
+    height:300px;
+    border-radius:5px;
+}
+#Process
+{
+    background-color:#C6EAFA;
+    border-radius:3px;
+    border-style:outset;
+    padding:10px;
+    margin:0 auto;
+    
+}
+    </style>
   </head>
   <body>
     <div class="wrapper">
@@ -20,11 +36,9 @@
         <h1>IE Conditional Stylesheet Assist</h1>
         <p>Simple Site to assist in creating a IE only style sheet for Responsive CSS stylesheets</p>
         <p class="view"><a href="https://github.com/arunkumr/IE-Conditonal-Stylesheet-Generator">View the Project on GitHub <small>arunkumr/IE-Conditonal-Stylesheet-Generator</small></a></p>
-        <ul>
-          <li><a href="https://github.com/arunkumr/IE-Conditonal-Stylesheet-Generator/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/arunkumr/IE-Conditonal-Stylesheet-Generator/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/arunkumr/IE-Conditonal-Stylesheet-Generator">View On <strong>GitHub</strong></a></li>
-        </ul>
+          <textarea id="input"></textarea>
+          <input type="button" id="Process" value="Process"></input>
+          <textarea id="output"></textarea>
       </header>
       <section>
         <p>If you created a stylesheet with media queries and everything and finally want to support IE8 also. Just copy paste your stylesheet here.</p>
