--- a/index.html
+++ b/index.html
@@ -14,19 +14,20 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <style>
-      textarea{
-    width:100%;
-    height:300px;
-    border-radius:5px;
+      textarea {
+  width: 100%;
+  height: 300px;
+  border-radius: 5px;
+  margin: 10px auto;
 }
-#Process
-{
-    background-color:#C6EAFA;
-    border-radius:3px;
-    border-style:outset;
-    padding:10px;
-    margin:0 auto;
-    
+#Process {
+  background-color: #C6EAFA;
+  border-radius: 3px;
+  border-style: outset;
+  padding: 10px;
+  margin: 0 auto;
+  width: 150px;
+  display: block;
 }
     </style>
   </head>
