--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </header>
       <section>
         <p>If you created a stylesheet with media queries and everything and finally want to support IE8 also. Just copy paste your stylesheet here.</p>
-       <tr><td>Specify your target desktop resolution width:</td><td><input type="text" value="1388"/></td><td>px</td></tr>
+       <tr><td>Specify your target desktop resolution width:</td><td><input type="text" id="pxl" value="1388" size="4"/></td><td>px</td></tr>
        <textarea id="input"></textarea>
           <input type="button" id="Process" value="Process"></input>
           <textarea id="output"></textarea>
